--- a/JuegoNaves/JuegoNaves/JuegoNaves.vcxproj.filters
+++ b/JuegoNaves/JuegoNaves/JuegoNaves.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Animation.cpp">
       <Filter>Archivos de origen\Animaciones</Filter>
     </ClCompile>
+    <ClCompile Include="CajaMunicion.cpp">
+      <Filter>Archivos de origen\Actores</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -97,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="Animation.h">
       <Filter>Archivos de encabezado\Animaciones</Filter>
+    </ClInclude>
+    <ClInclude Include="CajaMunicion.h">
+      <Filter>Archivos de encabezado\Actores</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
