--- a/JuegoNaves/JuegoNaves/JuegoNaves.vcxproj.filters
+++ b/JuegoNaves/JuegoNaves/JuegoNaves.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClCompile Include="CajaMunicion.cpp">
       <Filter>Archivos de origen\Actores</Filter>
     </ClCompile>
+    <ClCompile Include="Minion.cpp">
+      <Filter>Archivos de origen\Actores</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss.cpp">
+      <Filter>Archivos de origen\Actores</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -102,6 +108,12 @@
       <Filter>Archivos de encabezado\Animaciones</Filter>
     </ClInclude>
     <ClInclude Include="CajaMunicion.h">
+      <Filter>Archivos de encabezado\Actores</Filter>
+    </ClInclude>
+    <ClInclude Include="Minion.h">
+      <Filter>Archivos de encabezado\Actores</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss.h">
       <Filter>Archivos de encabezado\Actores</Filter>
     </ClInclude>
   </ItemGroup>
